--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@
 
 url: http://gitblog.ihoney.pe.kr
 title: 허니몬(Honeymon)의 gitblog
-subtitle: 허니몬의 개발관련 기록들
+subtitle: 개발소스와 개발관련 내용 정리
 author: honeymon
 simple_search: http://google.com/search
 description:
